--- a/package.json
+++ b/package.json
@@ -28,11 +28,17 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "electron": "^29.1.1",
     "electron-builder": "^24.13.3",
+    "sass-embedded": "^1.79.4",
     "typescript": "^5.4.2",
     "vite": "^5.1.5",
     "vite-plugin-electron": "^0.28.4",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vue": "^3.4.21",
     "vue-tsc": "^2.0.6"
+  },
+  "dependencies": {
+    "@primevue/themes": "^4.0.7",
+    "primevue": "^4.0.7",
+    "vue-router": "4"
   }
 }
