--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "vue-tsc": "^2.0.6"
   },
   "dependencies": {
+    "@playwright/test": "^1.48.0",
     "@primevue/themes": "^4.0.7",
+    "playwright": "^1.48.0",
+    "playwright-extra": "^4.3.6",
+    "playwright-extra-plugin-stealth": "^0.0.1",
     "primevue": "^4.0.7",
-    "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "vue-router": "4"
   }
