--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@playwright/test": "^1.48.0",
     "@primevue/themes": "^4.0.7",
+    "dayjs": "^1.11.13",
     "playwright": "^1.48.0",
     "playwright-extra": "^4.3.6",
     "playwright-extra-plugin-stealth": "^0.0.1",
